<resources>
    <string name="app_name">TempNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favourite</string>
    <string name="archived">Archived</string>
    <string name="note_title">Title</string>
    <string name="description">Description</string>
    <string name="description_of_note">Description of note</string>
    <string name="dummy_name">hasanbinkurshed@gamil.com</string>

    <string name="temp">Lorem ipsum dolor sit amet, consetetur sadipsing elitr, sed diam nonumy.</string>
    <string name="temp2">Lorem ipsum dolor sit amet</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="rational_storage_permission_explanation">Without permission to access your photos, media and files, the app is unable to save the data. Are you sure you want to deny this permission?</string>
    <string name="rational_camera_permission_explanation">Without permission to access your Camera, the app is unable to capture any picture. Are you sure you want to deny this permission?</string>
    <string name="rational_location_permission_explanation">Without your Location Permission, the app is unable to access your location. Are you sure you want to deny this permission?</string>
    <string name="education_massage_for_bg_location">To provide location reminders, this app requires background location access. By granting this permission, you allow the app to send you reminders based on your current location even when you\'re not using it actively.</string>
    <string name="bg_location_title"> Background Location Access</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="staggered">staggered</string>
    <string name="delete_undo_msg">note has been deleted. Would you like to undo the delete?</string>
    <string name="delete_confirm_msg">note has been deleted successfully!</string>
    <string name="floating_action_button">Floating_action_button</string>

</resources>