<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_24"
        android:iconTint="@color/colorWhite"
        android:title="@string/home"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/favorite_24"
        android:title="@string/favorite"
        android:iconTint="@color/colorWhite"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/navigation_archive"
        android:icon="@drawable/archive_24"
        android:iconTint="@color/colorWhite"
        android:title="@string/archived"
        app:showAsAction="always"/>
</menu>