<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    app:cardCornerRadius="@dimen/_16dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@color/black"
        >
        <LinearLayout
            android:id="@+id/text_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="horizontal"
            android:background="@color/black"

            >
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/textViewItemTitle"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/note_title"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/textViewItemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:contentDescription="@string/description_of_note"
                    android:textSize="14sp"

                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                >
                <ImageView
                    android:id="@+id/fav_icon"
                    android:layout_width="@dimen/_18dp"
                    android:layout_height="@dimen/_18dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/favorite_24"
                    android:visibility="visible"
                    app:tint="@color/colorStressHighBg" />

                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="@dimen/_18dp"
                    android:layout_height="@dimen/_18dp"
                    android:src="@drawable/notification"
                    android:visibility="visible"
                    android:layout_below="@+id/fav_icon"
                    android:layout_alignEnd="@+id/fav_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_2dp"
                    />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/id_checkbox"
                    android:layout_width="@dimen/_18dp"
                    android:layout_height="@dimen/_18dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:button="@drawable/custom_checkbox_18dp"
                    android:elevation="@dimen/_8dp"
                    app:buttonTint="@color/colorWhite"
                    android:checked="false"
                    android:visibility="gone"
                    />
            </RelativeLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/reveal_delete_button"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:src="@drawable/delete_white_24"
            android:layout_marginEnd="-8dp"
            android:layout_marginTop="-8dp"
            android:layout_marginBottom="-8dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorRed"
            android:visibility="gone"
            />
    </RelativeLayout>

   </androidx.cardview.widget.CardView>

